--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     rel="stylesheet">
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/dae8743371.js" crossorigin="anonymous"></script>
-  <!-- ionicons -->
-  <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,8 +16,21 @@
   <div class="wrapper">
     <!-- FIXED MENU -->
     <nav class="left">
-      <i class="fas fa-bars"></i>
+      <i class="fas fa-bars fashow"></i>
+      <i class="fas fa-times"></i>
     </nav>
+    <div class="leftmenu">
+      <ul>
+        <li>First</li>
+        <li>Second</li>
+        <li>Third</li>
+      </ul>
+      <ul>
+        <li>About</li>
+        <li>Shop</li>
+        <li>Contact</li>
+      </ul>
+    </div>
     <nav class="right">
       <a href="#">
         <i class="fab fa-instagram"></i>
@@ -96,6 +107,7 @@
 
 
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
